# harness-creando-mas

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
harness/: __init__.py
harness/adapters/: __init__.py  telegram.py
harness/agent/: __init__.py  agent.py
harness/api/: __init__.py  app.py  deps.py  schemas.py  types.py
harness/api/routes/: __init__.py  chat.py  health.py  telegram.py
harness/cache/: __init__.py  store.py
harness/limits/: __init__.py  rate_limiter.py
harness/provider/: __init__.py  base.py  gemini_provider.py  mock.py  openai_provider.py  router.py
harness/session/: __init__.py  store.py
harness/tenant/: __init__.py  auth.py  config.py  loader.py
harness/tool/: __init__.py  registry.py
harness/tool/ecosystem/: __init__.py  conversation.py  lead.py  postgres.py  tavily.py
scripts/: _smoke_sse_local.py  dev.sh
tenants/demo/: data_sources.yaml  system_prompt.md  telegram_users.yaml
tenants/lovbot-demo/: data_sources.yaml  system_prompt.md  tools.yaml
tenants/mica-inmobiliaria-demo/: data_sources.yaml  system_prompt.md  telegram_users.yaml  tools.yaml
tenants/patricia-back/: data_sources.yaml  system_prompt.md  telegram_users.yaml  tools.yaml
tenants/rawson-juridico/: data_sources.yaml  system_prompt.md  telegram_users.yaml  tools.yaml
tests/: conftest.py  test_cache.py  test_chat_endpoint.py  test_chat_stream.py  test_postgres_tool.py  test_postgres_tool_integration.py  test_provider_router.py  test_rate_limiter.py  test_telegram_adapter.py  test_tenant_loader.py
