[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harness-creando-mas"
version = "0.1.0"
description = "Harness HTTP multi-tenant de la agencia Creando Más / Lovbot (Fase 0 — demo inmobiliario)"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Arnaldo Ayala", email = "arnaldo@lovbot.ai" }]
license = { text = "Proprietary" }

dependencies = [
    # HTTP
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "python-multipart>=0.0.12",

    # LLM providers
    "openai>=2.0.0",
    "google-genai>=1.0.0",

    # Postgres
    "asyncpg>=0.30.0",

    # HTTP client (Tavily, futuras integraciones)
    "httpx>=0.27.0",

    # Config / env
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",

    # Cache TTL en memoria.
    "cachetools>=5.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "httpx>=0.27.0",  # ya en deps base, declarado acá para claridad
]

[tool.setuptools.packages.find]
where = ["."]
include = ["harness*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]  # line length manejada por formatter
